--- a/hauth.cabal
+++ b/hauth.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 87b26ece364cbff1ef8f9fa7d5a057616b0660b5ebb0233e8fba851a97fad4ca
+-- hash: 438d822c9e4a149af39a4930c42511413b886fe73dd5c8f08813d5102a4cab05
 
 name:           hauth
 version:        0.1.0.0
@@ -32,10 +32,14 @@ library
       Paths_hauth
   hs-source-dirs:
       src
-  default-extensions: NoImplicitPrelude OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes
   build-depends:
       base >=4.7 && <5
     , classy-prelude
+    , pcre-heavy
+    , template-haskell
+    , time
+    , time-lens
   default-language: Haskell2010
 
 executable hauth-exe
@@ -44,12 +48,16 @@ executable hauth-exe
       Paths_hauth
   hs-source-dirs:
       app
-  default-extensions: NoImplicitPrelude OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , classy-prelude
     , hauth
+    , pcre-heavy
+    , template-haskell
+    , time
+    , time-lens
   default-language: Haskell2010
 
 test-suite hauth-test
@@ -59,10 +67,14 @@ test-suite hauth-test
       Paths_hauth
   hs-source-dirs:
       test
-  default-extensions: NoImplicitPrelude OverloadedStrings
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , classy-prelude
     , hauth
+    , pcre-heavy
+    , template-haskell
+    , time
+    , time-lens
   default-language: Haskell2010
