--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,9 @@ packages:
 #
 # extra-deps: []
 
+extra-deps:
+- string-random-0.1.3.0
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
