--- a/package.yaml
+++ b/package.yaml
@@ -38,6 +38,7 @@ default-extensions:
 - QuasiQuotes
 - ConstraintKinds
 - FlexibleContexts
+- GeneralizedNewtypeDeriving
 
 library:
   source-dirs: src
