--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ dependencies:
 - mtl
 - data-has
 - string-random
+- katip
 
 default-extensions:
 - NoImplicitPrelude
@@ -39,6 +40,7 @@ default-extensions:
 - ConstraintKinds
 - FlexibleContexts
 - GeneralizedNewtypeDeriving
+- TemplateHaskell
 
 library:
   source-dirs: src
