--- a/hauth.cabal
+++ b/hauth.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0e7c842424a31c90b8d13f6590eeb39f50a7efdf3042560111209209b7170600
+-- hash: 7dd8cd0022029103ff7590a000327d06c699cbb8fa622bfcba53adcbfd3f1310
 
 name:           hauth
 version:        0.1.0.0
@@ -35,12 +35,13 @@ library
       Paths_hauth
   hs-source-dirs:
       src
-  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving TemplateHaskell
   build-depends:
       aeson
     , base >=4.7 && <5
     , classy-prelude
     , data-has
+    , katip
     , mtl
     , pcre-heavy
     , safe-exceptions
@@ -56,7 +57,7 @@ executable hauth-exe
       Paths_hauth
   hs-source-dirs:
       app
-  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving TemplateHaskell
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -64,6 +65,7 @@ executable hauth-exe
     , classy-prelude
     , data-has
     , hauth
+    , katip
     , mtl
     , pcre-heavy
     , safe-exceptions
@@ -80,7 +82,7 @@ test-suite hauth-test
       Paths_hauth
   hs-source-dirs:
       test
-  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving
+  default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving TemplateHaskell
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -88,6 +90,7 @@ test-suite hauth-test
     , classy-prelude
     , data-has
     , hauth
+    , katip
     , mtl
     , pcre-heavy
     , safe-exceptions
