Add RabbitMQ repo

--- a/hauth.cabal
+++ b/hauth.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 88e48ba80ffb1cc09faadb74358a44d576009bca4a0c8f543ff642f3f25b1625
+-- hash: 8f749f6abcf72b9b73d8372fa42195ffe43874f30d78a9ab687f23ae087160f7
 
 name:           hauth
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Adapter.InMemory.Auth
       Adapter.PostgreSQL.Auth
+      Adapter.RabbitMQ.Common
       Adapter.Redis.Auth
       Domain.Auth
       Domain.Validation
@@ -40,6 +41,7 @@ library
   default-extensions: NoImplicitPrelude OverloadedStrings QuasiQuotes ConstraintKinds FlexibleContexts GeneralizedNewtypeDeriving TemplateHaskell ScopedTypeVariables
   build-depends:
       aeson
+    , amqp
     , base >=4.7 && <5
     , classy-prelude
     , data-has
@@ -68,6 +70,7 @@ executable hauth-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , amqp
     , base >=4.7 && <5
     , classy-prelude
     , data-has
@@ -98,6 +101,7 @@ test-suite hauth-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , amqp
     , base >=4.7 && <5
     , classy-prelude
     , data-has
