--- a/stack.yaml
+++ b/stack.yaml
@@ -42,9 +42,13 @@ packages:
 #
 # extra-deps: []
 
+allow-newer: true
+
 extra-deps:
 - string-random-0.1.3.0
 - postgresql-simple-migration-0.1.15.0
+- digestive-functors-0.8.4.2
+- digestive-functors-aeson-1.1.27
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
