--- a/hauth.cabal
+++ b/hauth.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d0fe61425f3105994633f02e4b4cff65fa35b9b48d2292b6ce8c48e4fabc333b
+-- hash: 970795872f99bbbc26b1d0a4cff48efe7359d36b7b0d7dfe85c18280d00e8f5d
 
 name:           hauth
 version:        0.1.0.0
@@ -28,8 +28,11 @@ source-repository head
 library
   exposed-modules:
       Adapter.HTTP.API.Auth
+      Adapter.HTTP.API.Common
+      Adapter.HTTP.API.Main
       Adapter.HTTP.Common
       Adapter.HTTP.Main
+      Adapter.HTTP.Web.Main
       Adapter.InMemory.Auth
       Adapter.PostgreSQL.Auth
       Adapter.RabbitMQ.Auth
@@ -48,11 +51,14 @@ library
     , amqp
     , base >=4.7 && <5
     , blaze-builder
+    , blaze-html
     , classy-prelude
     , cookie
     , data-has
     , digestive-functors
     , digestive-functors-aeson
+    , digestive-functors-blaze
+    , digestive-functors-scotty
     , exceptions
     , hedis
     , http-types
@@ -70,6 +76,7 @@ library
     , time-lens
     , wai
     , wai-extra
+    , warp
   default-language: Haskell2010
 
 executable hauth-exe
@@ -85,11 +92,14 @@ executable hauth-exe
     , amqp
     , base >=4.7 && <5
     , blaze-builder
+    , blaze-html
     , classy-prelude
     , cookie
     , data-has
     , digestive-functors
     , digestive-functors-aeson
+    , digestive-functors-blaze
+    , digestive-functors-scotty
     , exceptions
     , hauth
     , hedis
@@ -108,6 +118,7 @@ executable hauth-exe
     , time-lens
     , wai
     , wai-extra
+    , warp
   default-language: Haskell2010
 
 test-suite hauth-test
@@ -124,11 +135,14 @@ test-suite hauth-test
     , amqp
     , base >=4.7 && <5
     , blaze-builder
+    , blaze-html
     , classy-prelude
     , cookie
     , data-has
     , digestive-functors
     , digestive-functors-aeson
+    , digestive-functors-blaze
+    , digestive-functors-scotty
     , exceptions
     , hauth
     , hedis
@@ -147,4 +161,5 @@ test-suite hauth-test
     , time-lens
     , wai
     , wai-extra
+    , warp
   default-language: Haskell2010
