--- a/stack.yaml
+++ b/stack.yaml
@@ -49,6 +49,8 @@ extra-deps:
 - postgresql-simple-migration-0.1.15.0
 - digestive-functors-0.8.4.2
 - digestive-functors-aeson-1.1.27
+- digestive-functors-blaze-0.6.2.0
+- digestive-functors-scotty-0.2.0.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
